--- a/buyOne.html
+++ b/buyOne.html
@@ -50,22 +50,28 @@
                 <div class="b1-l2">
                     HashTag
                 </div>
-
-                <span class="b1-l3">
-                    (Place + Tag + Sticker)
+                <div class="linebreak">
+                    <span class="b1-l3">
+                        (Tag + Stick + Place)
+                    </span>
+                    <br>
+                </div>
+                <span class="b1-l3p">
+                    ₹999.00
                 </span>
-                <br>
                 <br>
                 <span class="b1-l12">
-                    Pre-Order your HashTag for ₹100
+                    Pre-Order your HashTag for just
                 </span><br>
-                <span id="price" class="b1d-l5">
-                    ₹999.00
+                <span id="price" class="b1-l5">
+                    ₹50.</span>
+                <span class="b1-zero">00
                 </span>
 
-                <span id="price" class="b1m-l5">
-                    ₹999.00
-                </span>
+
+                <!-- <span id="price" class="b1m-l5">
+                    ₹50.00
+                </span> -->
                 <!-- <strike> -->
                 <span id="priceStrike" class="strike-pr">
                 </span>
@@ -133,7 +139,7 @@
                 <div class="p-li">
                     • Curved circular edge to hold tag. </div>
                 <div class="p-li">
-                    • Rare end flat surface to stick. </div>
+                    • Rear end flat surface to stick. </div>
                 <div class="p-li">
                     • Works with Android™ and Apple® devices. </div>
                 <div class="p-li">
@@ -152,7 +158,7 @@
 
             <p class="h6-line1">
                 Get rid of loosing
-                things.
+                things!
             </p>
             <p class="h6-line2">
                 HashTag is the super esay way to keep track of your stuff. Tag one on your keys. Put another in your
@@ -301,7 +307,7 @@
             <p class="h10-line2">
                 Your privacy and security are a top priority for HashTag. We are committed to providing a better finding
                 experience, while protecting you and your information responsibly. Which means we never sell your data
-                or information. We stand by this in all our privacy and security practices. <u>Learn more</u>.
+                or information. We stand by this in all our privacy and<br> security practices.
             </p>
 
         </center>
@@ -330,7 +336,7 @@
                         </a>
                     </span>
                     <span>
-                        <a href="https://twitter.com/hashtag_org_in" target="_blank">
+                        <a href="https://www.linkedin.com/company/80866394" target="_blank">
                             <img class="sl" src="./images/li.png">
                         </a>
 
@@ -363,10 +369,11 @@
 
         <br>
         <center>
-            <div class="ft-col2">
-                <span class="ft-line2new">CONTACT US AT: contact@hashtag.org.in</span>
+            <div class="ft-col2new">
+                <span class="ft-line2new">Connect with us: contact@hashtag.org.in</span>
                 <!-- <img class="imgb18" src="./images/img18.png"> -->
             </div>
+            <br>
             <span class="f-line-l">
                 Copyright © 2022 HashTag Electronics Pvt. Ltd. All rights reserved.
             </span>
@@ -521,7 +528,7 @@
                                     "title": "HashTag Cart",
                                     "total": "Subtotal",
                                     "empty": "You have no HashTags in your cart.",
-                                    "notice": "Pre-order your HashTag now for FREE",
+                                    "notice": "Pre-order your HashTag for just ₹50",
                                     "button": "Checkout"
                                 },
                                 "googleFonts": [
