--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <br>
             <span class="head1"><b>HashTag</b></span>
             <br>
-            <span class="line2">Place + Tag + Sticker</span>
+            <span class="line2">Tag + Stick + Place</span>
             <br>
             <span class="line3">Get rid of</span>
             <br>
@@ -62,7 +62,7 @@
                     Stick another on your TV remote. And there they are in the HashTag app.
                 </p>
                 <p class="line6">
-                    Book your HashTag for FREE
+                    Book your HashTag for just ₹50
                 </p>
                 <center>
                     <a href="./buyOne.html">
@@ -73,7 +73,7 @@
         </div>
     </div>
 
-    <div style="background-color: #F9F9F9;margin-top: -2px;">
+    <div class="gap-h">
         <br>
     </div>
 
@@ -104,17 +104,17 @@
             </div>
             <br>
             <span class="line10">
-                Slide it
-                <!-- <span class="vline"> -->
-                |
-                <!-- </span> -->
                 Tag it
                 <!-- <span class="vline"> -->
+                |
+                <!-- </span> -->
+                Stick it
+                <!-- <span class="vline"> -->
 
                 |
                 <!-- </span> -->
 
-                Stick it
+                Place it
 
             </span>
             <div class="home3-col2">
@@ -206,7 +206,7 @@
             </p>
         </div>
         <div class="h7-col2">
-            <img src="./images/img13.svg">
+            <img src="./images/img13.png">
         </div>
     </div>
 
@@ -238,7 +238,8 @@
             </p>
             <p class="h4-line2">
                 If you lose something when you're out and about, HashTag can help you locate it. View its most recent
-                location on maps. It'll show you the last time it was with you and also you can see the last 30 days'
+                location on maps. It'll show you the last time when it was with you and also you can see the last 30
+                days location
                 history.
             </p>
         </div>
@@ -326,7 +327,7 @@
         <div class="h11-l1">
             <button class="accordion">
                 <span class="h11-txt1">
-                    HashTag Tech Space
+                    HashTag Potential Tech Space
                 </span>
                 <!-- <img class="img20" src="./images/img20.png"> -->
             </button>
@@ -394,7 +395,7 @@
                             Connectivity
                         </div>
                         <div class="acc-des2">
-                            Bluetooth and Ultra Wideband for finding
+                            Bluetooth and Ultra Wideband for finding<br>
                             NFC tap for Lost Mode
                         </div>
                     </div>
@@ -421,7 +422,7 @@
                             Battery
                         </div>
                         <div class="acc-des2">
-                            3-years life
+                            3-years life<br>
                             User-replaceable CR2032 coin cell battery
                         </div>
                     </div>
@@ -503,7 +504,7 @@
                         </a>
                     </span>
                     <span>
-                        <a href="https://twitter.com/hashtag_org_in" target="_blank">
+                        <a href="https://www.linkedin.com/company/80866394" target="_blank">
                             <img class="sl" src="./images/li.png">
                         </a>
 
@@ -516,7 +517,7 @@
                 </span>
             </div>
             <div class="ft-col2">
-                <span class="ft-line2">CONTACT US AT: contact@hashtag.org.in</span>
+                <span class="ft-line2">Connect with us: contact@hashtag.org.in</span>
 
             </div>
         </div>
@@ -527,7 +528,7 @@
         <center>
             <div class="h13-linef">Launching by August 2022</div>
             <br>
-            <span class="h13-linef2">Book your HashTag now to grab it first!</span>
+            <span class="h13-linef2">Book your HashTag now to grab it first!</span><br>
             <a href="./buyOne.html">
                 <button class="btn3">Pre-Order</button>
             </a>
