--- a/buyFour.html
+++ b/buyFour.html
@@ -52,19 +52,26 @@
                 </div>
 
                 <span class="b1-l3">
-                    (Place + Tag + Sticker)
+                    (Tag + Stick + Place)
                 </span>
                 <br>
                 <br>
+                <span class="b1-l3p">
+                    ₹3796.00
+                </span>
+                <br>
                 <span class="b1-l12">
-                    Pre-Order your HashTag for ₹100
+                    Pre-Order your HashTag for just
                 </span><br>
                 <span id="price" class="b1-l5">
-                    ₹3796.00
+                    ₹200.
+                </span>
+                <span class="b1-zero">
+                    00
                 </span>
                 <!-- <strike> -->
                 <span id="priceStrike" class="strike-pr">
-                    (₹3999.00)
+                    <!-- (₹3999.00) -->
                 </span>
                 <!-- </strike> -->
                 <div id="prd-count" class="b1-l4">
@@ -129,7 +136,7 @@
                 <div class="p-li">
                     • Curved circular edge to hold tag. </div>
                 <div class="p-li">
-                    • Rare end flat surface to stick. </div>
+                    • Rear end flat surface to stick. </div>
                 <div class="p-li">
                     • Works with Android™ and Apple® devices. </div>
                 <div class="p-li">
@@ -148,7 +155,7 @@
 
             <p class="h6-line1">
                 Get rid of loosing
-                things.
+                things!
             </p>
             <p class="h6-line2">
                 HashTag is the super esay way to keep track of your stuff. Tag one on your keys. Put another in your
@@ -294,7 +301,7 @@
             <p class="h10-line2">
                 Your privacy and security are a top priority for HashTag. We are committed to providing a better finding
                 experience, while protecting you and your information responsibly. Which means we never sell your data
-                or information. We stand by this in all our privacy and security practices. <u>Learn more</u>.
+                or information. We stand by this in all our privacy and <br>security practices.
             </p>
 
         </center>
@@ -324,7 +331,8 @@
                         </a>
                     </span>
                     <span>
-                        <a href="https://twitter.com/hashtag_org_in" target="_blank" style="text-decoration: none;">
+                        <a href="https://www.linkedin.com/company/80866394" target="_blank"
+                            style="text-decoration: none;">
                             <img class="sl" src="./images/li.png">
                         </a>
 
@@ -425,9 +433,10 @@
 
         <center>
             <div class="ft-col2">
-                <span class="ft-line2new">CONTACT US AT: contact@hashtag.org.in</span>
+                <span class="ft-line2new">Connect with us: contact@hashtag.org.in</span>
                 <!-- <img class="imgb18" src="./images/img18.png"> -->
             </div>
+            <br>
             <span class="f-line-l">
                 Copyright © 2022 HashTag Electronics Pvt. Ltd. All rights reserved.
             </span>
@@ -581,7 +590,7 @@
                                     "title": "HashTag Cart",
                                     "total": "Subtotal",
                                     "empty": "You have no HashTags in your cart.",
-                                    "notice": "Pre-order your HashTag now for FREE",
+                                    "notice": "Pre-order your HashTag for just ₹50",
                                     "button": "Checkout"
                                 },
                                 "googleFonts": [
