added policy pages

--- a/buyTwo.html
+++ b/buyTwo.html
@@ -427,19 +427,57 @@
             </div>
 
         </div> -->
-        <br>
+
+
         <center>
-            <div class="ft-col2">
-                <span class="ft-line2new">Connect with us: contact@hashtag.org.in</span>
-                <!-- <img class="imgb18" src="./images/img18.png"> -->
-            </div>
-            <br>
             <span class="f-line-l">
-                Copyright © 2022 HashTag Electronics Pvt. Ltd. All rights reserved.
+                <a href="./contact.html" style="text-decoration: none ; color: black">
+                    <label class="ft-lnk">
+                        Contact Us
+                    </label>
+                </a>
+                <label class="ft-lnk2">
+                    |
+                </label>
+                <a href="policy.html" style="text-decoration: none ; color: black">
+                    <label class="ft-lnk">
+                        Privacy Policies
+                    </label>
+                </a>
+                <label class="ft-lnk2">
+                    |
+                </label>
+                <a href="terms.html" style="text-decoration: none ; color: black">
+                    <label class="ft-lnk">
+                        Terms & Conditions
+                    </label>
+                </a>
+                <label class="ft-lnk2">
+                    |
+                </label>
+                <a href="shipping.html" style="text-decoration: none ; color: black">
+                    <label class="ft-lnk">
+                        Shipping Policy
+                    </label>
+                </a>
+                <label class="ft-lnk2">
+                    |
+                </label>
+                <a href="#" style="text-decoration: none ; color: black">
+                    <label class="ft-lnk">
+                        Return & Refund Policy
+                    </label>
+                </a>
             </span>
+            <br>
+            <br>
+            <center>
+                <span class="f-line-l">
+                    Copyright © 2022 HashTag Electronics Pvt. Ltd. All rights reserved.
+                </span>
+            </center>
         </center>
     </div>
-
 
 
 
