--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="main.css" />
+    <link rel="stylesheet" type="text/css" href="mainIndex.css" />
     <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
     <title>HashTag</title>
     <link rel="icon" type="image/x-icon" href="./images/hlogo.png">
@@ -539,8 +539,52 @@
         <br>
         <center>
             <span class="f-line-l">
-                Copyright © 2022 HashTag Electronics Pvt. Ltd. All rights reserved.
+                <a href="./contact.html" style="text-decoration: none ; color: black">
+                    <label class="ft-lnk">
+                        Contact Us
+                    </label>
+                </a>
+                <label class="ft-lnk2">
+                    |
+                </label>
+                <a href="policy.html" style="text-decoration: none ; color: black">
+                    <label class="ft-lnk">
+                        Privacy Policies
+                    </label>
+                </a>
+                <label class="ft-lnk2">
+                    |
+                </label>
+                <a href="terms.html" style="text-decoration: none ; color: black">
+                    <label class="ft-lnk">
+                        Terms & Conditions
+                    </label>
+                </a>
+                <label class="ft-lnk2">
+                    |
+                </label>
+                <a href="shipping.html" style="text-decoration: none ; color: black">
+                    <label class="ft-lnk">
+                        Shipping Policy
+                    </label>
+                </a>
+                <label class="ft-lnk2">
+                    |
+                </label>
+                <a href="#" style="text-decoration: none ; color: black">
+                    <label class="ft-lnk">
+                        Return & Refund Policy
+                    </label>
+                </a>
             </span>
+            <br>
+            <br>
+            <center>
+                <span class="f-line-l">
+                    Copyright © 2022 HashTag Electronics Pvt. Ltd. All rights reserved.
+                </span>
+            </center>
+
         </center>
         <br>
     </div>
