--- a/buyTwo.html
+++ b/buyTwo.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="buyOne.css" />
+    <link rel="stylesheet" type="text/css" href="buyOneNew.css" />
     <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
     <title>HashTag Pack-2</title>
     <!-- Global site tag (gtag.js) - Google Analytics -->
