fixed link bugs

--- a/buyOne.html
+++ b/buyOne.html
@@ -402,7 +402,7 @@
                 <label class="ft-lnk2">
                     |
                 </label>
-                <a href="#" style="text-decoration: none ; color: black">
+                <a href="refund.html" style="text-decoration: none ; color: black">
                     <label class="ft-lnk">
                         Return & Refund Policy
                     </label>
