--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="mainIndex.css" />
+    <link rel="stylesheet" type="text/css" href="mainIndex1.css" />
     <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
     <title>HashTag</title>
     <link rel="icon" type="image/x-icon" href="./images/hlogo.png">
